GNOME Bugzilla – Bug 626514
License dialog doesn't take into account long copyrights
Last modified: 2011-03-14 08:55:08 UTC
Created attachment 167488 [details] screenshot of gedit's license <nacho> ebassi, http://imagebin.org/108934 <- it looks weird <nacho> maybe either add another \n before the license or just not add the copyright <ebassi> nacho: mmh, I forgot that there are apps with copyrights long as my arm ;-) <nacho> yeah <ebassi> nacho: I was mostly using what Luis recommended - <app_name> <copyright holder>\n <ebassi> I guess we can add a new line after <app_name> <nacho> yeah <nacho> also see that we need to break one of the lines as there are too many names <ebassi> nacho: that's not something we can really fix generically <ebassi> unless I make :license-wrap FALSE -- which would make URLs a bit crap <ebassi> or might ever make the horizontal scrollbar appear <nacho> yeah I was thinking on that <nacho> ebassi, also change the size of the license dialog to have 80 chars per line <ebassi> nacho: well, I don't mind more columns - it's not 1987 any more ;-) <ebassi> but whatever size I choose, there'll always be something that goes out <nacho> I mean, at least 80 chars per line <nacho> I think right now it is less <nacho> as it is the usual wrap in the code
As I commented already in bug 336225, a double '\n' is a must. Otherwise it looks crappy (all in the same paragraph).
Created attachment 167714 [details] [review] Improve the looks of the license text in GtkAboutDialog It is not safe to assume that copyright text in applications is one liner, therefore it's better to split it from the program name. Also, the license text should be in a paragraph of its own, so add an extra '\n' above it.
Review of attachment 167714 [details] [review]: looks good to me.
Comment on attachment 167714 [details] [review] Improve the looks of the license text in GtkAboutDialog Attachment 167714 [details] pushed as e4a8337 - Improve the looks of the license text in GtkAboutDialog Thanks. Still missing to fix the wrapping.
This needs to be reevaluated after the recent about dialog redesign, I guess.
I think this is now fixed with the redesign of the dialog. I'm closing this as fixed.