Improve the looks of the license text in GtkAboutDialog

It is not safe to assume that copyright text in applications is
one liner, therefore it's better to split it from the program name.

Also, the license text should be in a paragraph of its own, so
add an extra '\n' above it.

https://bugzilla.gnome.org/show_bug.cgi?id=626514